增加匹配规则字段

--- a/ExcelAPPWeb/asserts/lookup.html
+++ b/ExcelAPPWeb/asserts/lookup.html
@@ -577,6 +577,8 @@
 
         $(function () {
             var id = getQuery("id");
+            var keyword = getQuery("keyword");
+            $("#txtKeyWord").val(keyword);
             lookupHelper = new LookupHelper({ "sqlid": id });
             lookupHelper.bind();
         });
