--- a/ExcelAPPWeb/asserts/lookup.html
+++ b/ExcelAPPWeb/asserts/lookup.html
@@ -569,7 +569,7 @@
         function getQuery(key) {
             var reg = new RegExp("(^|&)" + key + "=([^&]*)(&|$)", "i");
             var r = window.location.search.substr(1).match(reg);
-            if (r != null) return unescape(r[2]);
+            if (r != null) return decodeURI(r[2]);
             return "";
         }
 
