修改增加 相关内容

--- a/ExcelAPPWeb/asserts/import.html
+++ b/ExcelAPPWeb/asserts/import.html
@@ -62,7 +62,7 @@
                     <button class="lee-btn lee-btn-primary" disabled id="btnUpload" onclick="ImportController.beginUpload()">确认上传</button>
                     <button class="lee-btn lee-btn-danger" disabled id="btnCancel" onclick="ImportController.cancelUpload()">取消上传</button>
                     <button class="lee-btn " style="display:none;" id="btnCustom" onclick="ImportController.custom()">自定义</button>
-
+                    <button class="lee-btn lee-btn-primary"  id="btnTip" onclick="ImportController.showTip()">填报说明</button>
                     <span class="export-tip">已经加载数据30条，导入成功0条，失败0条</span>
                 </div>
             </div>
