修改帮助过滤条件'{GS_DWBH}'    '{字段名}'

--- a/ExcelAPPWeb/asserts/lookup.html
+++ b/ExcelAPPWeb/asserts/lookup.html
@@ -475,7 +475,7 @@
                 var qryfilter = [];
                 var keyword = $("#txtKeyWord").val();
 
-                var filter = "";
+                var filter = " " + this.filter;
                 if (keyword) {
                     if (this.fields.length > 0)
                         filter += " and (";
