--- a/ExcelApp/asserts/main.html
+++ b/ExcelApp/asserts/main.html
@@ -25,7 +25,7 @@
     </nav>
     <div class="topobar">
 
-        <span><i class="lee-ion-android-apps" style="font-size:20px;margin-right:10px;"></i>数据导入平台V0.1.1</span>
+        <span><i class="lee-ion-android-apps" style="font-size:20px;margin-right:10px;"></i>OMS数据交换V2.1.6</span>
     </div>
     <div class="progress" id="progresswrap" style="display:none;margin: 15px;">
         <div class="lee-progress lee-progress-normal lee-progress-show-info">
