--- a/ExcelAPPWeb/asserts/login.html
+++ b/ExcelAPPWeb/asserts/login.html
@@ -80,7 +80,7 @@
             });
             InitLoginInfo();
             function InitLoginInfo() {
-                alert(1);
+                //alert(1);
                 APIBridge.GetLogin();
             }
 
