--- a/ExcelAPPWeb/asserts/frame.html
+++ b/ExcelAPPWeb/asserts/frame.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
     <div class="topobar">
-        <span><i class="lee-ion-android-apps" style="font-size:20px;margin-right:10px;"></i>OMS数据交换V2.1.6</span>
+        <span><img src="css/images/OMS.png"  style="width:20px;padding-top:10px;margin-right:10px;">OMS数据交换V2.1.6</span>
     </div>
 
     <div class="choose">
