--- a/ExcelAPPWeb/asserts/frame.html
+++ b/ExcelAPPWeb/asserts/frame.html
@@ -47,11 +47,11 @@
             height: auto;
         }
 
-        .lee-tab-content-item iframe {
-            width: 100%;
-            height: 99%;
-            border: none;
-        }
+            .lee-tab-content-item iframe {
+                width: 100%;
+                height: 99%;
+                border: none;
+            }
 
         .lee-text .lee-text-field, .lee-text-date .lee-text-field, .lee-text-drop-down .lee-text-field, .lee-text-spinner .lee-text-field {
             border-left-color: #DDD !important;
@@ -68,7 +68,7 @@
         </div>
     </nav>
     <div class="topobar">
-        <span><img src="css/images/OMS.png"  style="width:20px;padding-top:10px;margin-right:10px;">OMS数据交换V2.1.6</span>
+        <span><img src="css/images/OMS.png" id="btmain" style="width:20px;padding-top:10px;margin-right:10px;">OMS数据交换V2.1.6</span>
     </div>
 
     <div class="choose">
@@ -95,7 +95,7 @@
     <div class="center">
         <div id="tabInfo" class="flat">
             <div title="首页">
-                <iframe src="main.html"></iframe>
+                <iframe id="srcmain" src="main.html"></iframe>
             </div>
         </div>
 
@@ -156,6 +156,8 @@
     </div>
 
     <script>
+        var currentuserid = "", currentcode = "", currentusername = "", currentgsdwbh = "";
+
         var openTabId = [];
         $("#tabInfo").leeTab();
         $("#txtOrgInfo").leeLookup({
@@ -270,6 +272,14 @@
         }
 
 
+        idp.service.GetUserInfo().done(function (data) {
+            var CurModel = data.data;
+            currentuserid = CurModel.Id;
+            currentusername = CurModel.Name;
+            currentcode = CurModel.Code;
+           // currentgsdwbh = $("#txtOrgInfo").leeUI().getValue();
+		   $("#srcmain").attr("src","http://10.8.2.107:9001/drp/NoticeIndex.html?p_USERID="+CurModel.Code+"&p_USERNAME="+currentcode+"");
+        });
 
         idp.service.getFunc().done(function (data) {
             $("#navTree").leeTree({
