--- a/ExcelAPPWeb/asserts/login.html
+++ b/ExcelAPPWeb/asserts/login.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="css/sys.css" />
     <script src="libs/jquery/jquery-1.10.2.min.js"></script>
+    <script src="libs/jquery.cookie.js"></script>
     <script src="libs/leeui/js/leeui.js"></script>
     <script src="scripts/service.js"></script>
 </head>
@@ -61,7 +62,9 @@
             </div>
         </div>
         <script>
-
+            function setCookie(key, value) {
+                $.cookie(key, value);
+            }
 
             $(function () {
                 $("#loginBtn").click(function () {
