--- a/ExcelAPPWeb/asserts/import.html
+++ b/ExcelAPPWeb/asserts/import.html
@@ -8,6 +8,8 @@
     <link href="libs/leeui/css/bulid.min.css" rel="stylesheet" />
     <link href="libs/leeui/css/icon.css" rel="stylesheet" />
     <script src="libs/jquery/jquery-1.10.2.min.js"></script>
+
+    <script src="libs/jquery.cookie.js"></script>
     <script src="libs/laydate/laydate.js"></script>
     <link rel="stylesheet" href="css/sys.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -180,6 +182,7 @@
 
 
     <script>
+        if (localStorage["GSDWBH"]) $.cookie("GSDWBH", localStorage["GSDWBH"]);
 	function date() {
 				var date = new Date();
 				var month = parseInt(date.getMonth() + 1);
